@@ -1,3 +1,8 @@
+2014-07-30  Matthew Mundell <matthew.mundell@greenbone.net>
+
+	* src/gsad_omp.c (get_report, get_report_section): Get report formats
+	that are owned by other users too, for the download dropdown.
+
 2014-07-30  Timo Pollmeier <timo.pollmeier@greenbone.net>
 
 	Use UUIDs to identify chart preferences and keep them between sessions
